# wasi-plugin-example

./: README.md
plugin-component/: Cargo.toml  plugin.wasm
plugin-component/src/: lib.rs
plugin-component/wit/: world.wit
plugin-example/: Cargo.toml  build.rs  demo.component.wasm  wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
plugin-example/src/: lib.rs
plugin-host/: Cargo.toml  main.rs
plugin-test/: Cargo.toml  plugin.wasm
plugin-test/src/: lib.rs
