[package]
edition = "2021"
name = "plugin-host"
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.68"
tokio = {version = "1.32.0", features = ["full"]}
# wasmtime = {version = "13.0.0", features = ["component-model", "wat"]}
wasmtime = {version = "14.0.0", git = "https://github.com/bytecodealliance/wasmtime", features = ["component-model", "wat"]}
wasmtime-wasi = {version = "14.0.0", git = "https://github.com/bytecodealliance/wasmtime", features = ["preview2", "tokio"]}
